<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <TextView
        android:id="@+id/questionText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qw7"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:padding="10dp"
        android:layout_below="@+id/image7"/>


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center" />


    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/questionText7"
        android:layout_above="@id/container3">
        <RadioButton
            android:id="@+id/answ71"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/answ71"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/answ72"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/answ72"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/answ73"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/answ73"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/answ74"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/answ74"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/container3"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:onClick="onClick"
            android:textSize="24sp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/image7"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image7"
        android:layout_width="338dp"
        android:layout_height="278dp"
        android:layout_below="@id/title"/>

</RelativeLayout>