<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_create"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50sp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_below="@+id/title"
        android:layout_marginTop="28sp"
        android:layout_marginEnd="17sp"
        android:layout_marginStart="13sp"
        android:background="@color/white"
        android:layout_marginHorizontal="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/question_type"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="377sp"
        android:layout_below="@+id/container2"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="200sp">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:layout_below="@+id/spinner"
        android:id="@+id/container1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/name_field"/>

            <EditText
                android:id="@+id/testName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/teal_200"/>
            <requestFocus />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:layout_below="@+id/container1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/test_comment"/>

            <EditText
                android:id="@+id/test_comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/teal_200"/>
            <requestFocus />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/butAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginHorizontal="27sp"
            android:text="@string/buttonAdd" />

        <Button
            android:id="@+id/butEnd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginHorizontal="27sp"
            android:text="@string/buttonEnd"
            />
    </LinearLayout>

</RelativeLayout>