<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center" />
    <LinearLayout
        android:id="@+id/container3"
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="10sp">

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:onClick="onClick"
            android:textSize="24sp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/Image"
        android:layout_centerHorizontal="true"
        android:layout_width="338sp"
        android:layout_height="278sp"
        android:layout_below="@id/title"/>
    <LinearLayout
        android:id="@+id/container7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40sp"
        android:layout_marginTop="500sp"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="370sp">

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answ8"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/answ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@+id/answ"/>
    </LinearLayout>
    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_below="@id/Image"/>
</RelativeLayout>