<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <TextView
        android:id="@+id/questionText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qw3"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_below="@id/image3"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center" />


    <LinearLayout
        android:id="@+id/container3"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:onClick="onClick"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image3"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image3"
        android:layout_width="338dp"
        android:layout_height="278dp"
        android:layout_below="@id/title"/>


    <LinearLayout
        android:id="@+id/container7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="370dp">

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answ30"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/answ30"/>
        <EditText
            android:id="@+id/answ31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/answ31"/>
    </LinearLayout>

</RelativeLayout>